Updating to Angular 5

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
     <!--Footer-->
     <hr />
     <footer class="footer">
-        <p>&copy; AMarcello 2016</p>
+        <p>&copy; AMarcello 2016 - 2018</p>
     </footer>
     <!--/Footer-->
 </div>
