--- a/src/app/components/inventory/item/item.component.scss
+++ b/src/app/components/inventory/item/item.component.scss
@@ -3,7 +3,7 @@
         cursor: not-allowed;
         opacity: 0.5;
     }
-    &-block {
+    &-body {
         & + & {
             padding-top: 0;
         }
